objects/Knowledge_kav_Home__dll.object
<CustomObject>
    <fields>
        <fullName>Answer_c__c</fullName>
        <label>Answer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleMasterLanguage__c</fullName>
        <label>Article Primary Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>Article Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentNote__c</fullName>
        <label>Assignment Note</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstPublishedDate__c</fullName>
        <label>First Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Knowledge Article Version ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLatestVersion__c</fullName>
        <label>Is Latest Version</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVisibleInApp__c</fullName>
        <label>Visible In Internal App</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVisibleInCsp__c</fullName>
        <label>Visible to Customer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPkb__c</fullName>
        <label>Visible In Public Knowledge Base</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVisibleInPrm__c</fullName>
        <label>Visible to Partner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>Knowledge Article ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeLanguageModel__c</fullName>
        <label>Large Language Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MigratedToFromArticleVersion__c</fullName>
        <label>Mapping info between old Article Version</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextReviewDate__c</fullName>
        <label>Next Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>Publication Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_c__c</fullName>
        <label>Question</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlName__c</fullName>
        <label>URL Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>